Dummy_Package_for_scratch_org/main/default/objects/Pull_Request_Review__c/Pull_Request_Review__c.object-meta.xml
<CustomObject>
    <label>Pull Request Review</label>
    <nameField>
        <displayFormat>Review-{00000}</displayFormat>
        <label>Pull Request Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pull Request Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>