Dummy_Package_for_scratch_org/main/default/objects/Pull_Request_Review__c/fields/Pull_Request__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request__c</fullName>
    <label>Pull Request</label>
    <referenceTo>Pull_Request__c</referenceTo>
    <relationshipName>Pull_Request_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>