Dummy_Package_for_scratch_org/main/default/objects/Pull_Request_Review__c/fields/Review_Action__c.field-meta.xml
<CustomField>
    <fullName>Review_Action__c</fullName>
    <label>Review Action</label>
    <length>80</length>
    <type>Text</type>
</CustomField>