Dummy_Package_for_scratch_org/main/default/objects/Pull_Request_Review__c/fields/Review_Id__c.field-meta.xml
<CustomField>
    <fullName>Review_Id__c</fullName>
    <externalId>true</externalId>
    <label>Review Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>