Dummy_Package_for_scratch_org/main/default/objects/Pull_Request_Review__c/fields/URL_Link__c.field-meta.xml
<CustomField>
    <fullName>URL_Link__c</fullName>
    <formula>IF(
 ISBLANK(Url__c),
 &quot;&quot;,
 HYPERLINK(Url__c, &quot;Go to Review&quot;)
)</formula>
    <label>URL Link</label>
    <type>Text</type>
</CustomField>