Dummy_Package_for_scratch_org/main/default/objects/Pull_Request_Review__c/fields/User_Avatar__c.field-meta.xml
<CustomField>
    <fullName>User_Avatar__c</fullName>
    <formula>IMAGE(User_Avatar_Url__c, Username__c, 50, 50)</formula>
    <label>User Avatar</label>
    <type>Text</type>
</CustomField>