Dummy_Package_for_scratch_org/main/default/objects/Pull_Request_Review__c/fields/User_Avatar_Url__c.field-meta.xml
<CustomField>
    <fullName>User_Avatar_Url__c</fullName>
    <label>User Avatar Url</label>
    <type>Url</type>
</CustomField>